fix: remove unnecessary things
