# pkg/auth/api/grpc/auth.swagger.json
@@ -528,31 +528,6 @@
         ]
       }
     },
-    "/users/{id}": {
-      "get": {
-        "summary": "TODO: Remove func only for tests",
-        "operationId": "GetUserByID",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1User"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "AuthService"
-        ]
-      }
-    },
     "/validate": {
       "get": {
         "operationId": "Validate",
@@ -891,91 +866,6 @@
         }
       }
     },
-    "v1User": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        },
-        "state": {
-          "$ref": "#/definitions/v1UserState"
-        },
-        "creation_date": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "activation_date": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "change_date": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "last_login": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "password_changed": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "user_name": {
-          "type": "string"
-        },
-        "first_name": {
-          "type": "string"
-        },
-        "last_name": {
-          "type": "string"
-        },
-        "nick_name": {
-          "type": "string"
-        },
-        "display_name": {
-          "type": "string"
-        },
-        "preferred_language": {
-          "type": "string"
-        },
-        "gender": {
-          "$ref": "#/definitions/v1Gender"
-        },
-        "email": {
-          "type": "string"
-        },
-        "is_email_verified": {
-          "type": "boolean",
-          "format": "boolean"
-        },
-        "phone": {
-          "type": "string"
-        },
-        "is_phone_verified": {
-          "type": "boolean",
-          "format": "boolean"
-        },
-        "country": {
-          "type": "string"
-        },
-        "locality": {
-          "type": "string"
-        },
-        "postal_code": {
-          "type": "string"
-        },
-        "region": {
-          "type": "string"
-        },
-        "street_address": {
-          "type": "string"
-        },
-        "password_change_required": {
-          "type": "boolean",
-          "format": "boolean"
-        }
-      }
-    },
     "v1UserAddress": {
       "type": "object",
       "properties": {
@@ -1097,19 +987,6 @@
           }
         }
       }
-    },
-    "v1UserState": {
-      "type": "string",
-      "enum": [
-        "USERSTATE_UNSPECIEFIED",
-        "USERSTATE_ACTIVE",
-        "USERSTATE_INACTIVE",
-        "USERSTATE_DELETED",
-        "USERSTATE_LOCKED",
-        "USERSTATE_SUSPEND",
-        "USERSTATE_INITIAL"
-      ],
-      "default": "USERSTATE_UNSPECIEFIED"
     },
     "v1VerifyMfaOtp": {
       "type": "object",
